# HiveMind

./: .gitmodules  CMakeLists.txt  Calculate_Performance.cpp  Calculate_Performance.hpp  Dockerfile  HiveMindCLI.cpp  Hook_Test.cpp  Offload_Hook.cpp  Offload_Hook.hpp  Orchestrate.py  README.md  Raft_Engine.cpp  Raft_Engine.hpp  Request_Offload.cpp  Request_Offload.h  build.bat  build.ps1  compute_check.cpp  compute_check.hpp  containerization.cpp  containerization.hpp  detect_toolchain.ps1  global.cpp  global.hpp  global_strings.hpp  hivemind_pch.hpp  hook.c  hook.h  hook_test.bat  install_hook.cpp  join_protocol.hpp  leader_protocol.hpp  matrix_funcs.cpp  matrix_funcs.hpp  mindmesh_pch.hpp  my-runtime.tar  network.cpp  network.hpp  patch_deps.bat  patch_deps.ps1  (+6 more)
Winforms/MMWinforms/: MMWinforms.sln  MMWinforms.vcxproj
